loadng of compiled code im progress